fixed broken css/js, except image size

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,13 @@
+.card {
+	height: 200px;
+	width: 150px;
+	border: 1px solid black;
+	background-color: #ffff00;
+	border-radius: 10px;
+	float: left;
+	margin: 8%;
+}
+
 body {
 	text-align: center;
 }
@@ -43,20 +53,15 @@ nav a:hover {
 	width: 50%;
 }
 
-.card {
-	height: 200px;
-	width: 150px;
-	border: 1px solid black;
-	background-color: #ffff00;
-	border-radius: 10px;
-	float: left;
-	margin: 8%;
-}
-
 span {
 	color: #ff0000;
 }
 
 footer {
 	background-color: #808080;
+	text-align: center;
 
+img {
+	height: 200px;
+	width: 150px;
+}
